testdata/baselines/reference/compiler/quantifiedTypesBasic2.errors.txt
quantifiedTypesBasic2.ts(9,4): error TS2345: Argument of type '{ values: ({ key: string; } | { key: number; })[]; identifier: (v: { key: string; } | { key: number; }) => string | number; }' is not assignable to parameter of type '{ values: ({ key: string; } | { key: number; })[]; identifier: (value: { key: string; } | { key: number; }) => string; }'.
  The types returned by 'identifier(...)' are incompatible between these types.
    Type 'string | number' is not assignable to type 'string'.
      Type 'number' is not assignable to type 'string'.


==== quantifiedTypesBasic2.ts (1 errors) ====
    declare const f1: (t: <T> T) => void
    f1("hello")
    
    declare const f2: (t: <T> { values: T[], identifier: (value: T) => string }) => void
    f2({
      values: [{ key: "a" }, { key: "b" }, { key: "c" }],
      identifier: v => v.key
    })
    f2({
       ~
      values: [{ key: "a" }, { key: "b" }, { key: 0 }],
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      identifier: v => v.key
    ~~~~~~~~~~~~~~~~~~~~~~~~
    })
    ~
!!! error TS2345: Argument of type '{ values: ({ key: string; } | { key: number; })[]; identifier: (v: { key: string; } | { key: number; }) => string | number; }' is not assignable to parameter of type '{ values: ({ key: string; } | { key: number; })[]; identifier: (value: { key: string; } | { key: number; }) => string; }'.
!!! error TS2345:   The types returned by 'identifier(...)' are incompatible between these types.
!!! error TS2345:     Type 'string | number' is not assignable to type 'string'.
!!! error TS2345:       Type 'number' is not assignable to type 'string'.
    